20060808
 - (djm) Add support for Win32

20060522
 - (djm) Start