@@ -1,3 +1,7 @@
+20091001
+ - (djm) Allow Python threads to run during (potentially lengthy) bcrypt
+   operation. Patch from vijay AT meebo-inc.com
+
 20060808
  - (djm) Add support for Win32
 
